# Claymore

./: CMakeLists.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-dsp-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-selectable-oversampling/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-gui/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: ClaymoreEngine.h  OutputLimiter.h
Source/dsp/fuzz/: FuzzConfig.h  FuzzCore.h  FuzzTone.h  FuzzType.h
Source/gui/: OversamplingSelector.h
Source/look/: ClaymoreTheme.cpp  ClaymoreTheme.h
